src/App.css
:root {
  --clr-primary: #0b0d17;
  --clr-secondary: #d0d6f9;
  --clr-accent: #ffffff;
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
body {
  font-family: "Bellefair", serif;
}

.space {
  height: 100vh;
  padding: 1rem;
  background-image: url(./assets/home/background-home-desktop.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  color: var(--clr-accent);
}
.nav-bar {
  display: flex;
  margin-left: 20px;
  height: 100px;
  align-items: center;
  justify-content: space-between;
}
.nav-img {
  width: 48px;
  height: 50px;
}
tr {
  border: 1px solid var(--clr-accent);
  width: 500px;
  opacity: 50%;
  z-index: 10;
  transform: translate(25%);
}
.nav-menu {
  width: 48%;
  background-color: rgba(255, 255, 255, 0.2);
  backdrop-filter: blur(8px);
  border-radius: 4px;
  height: 90%;
}
.nav-list {
  list-style: none;
  height: 100%;
  display: flex;
  gap: 2.5rem;
  justify-content: center;
  align-items: center;
}
.nav-list > li {
  display: flex;
  gap: 0.3rem;
  cursor: pointer;
  /* border-bottom: 3px solid white; */
  height: 90%;
  padding-top: 30px;
}
.nav-list > li > .li-num {
  font-weight: bolder;
}
.home {
  height: 550px;
  display: flex;
  align-items: flex-end;
  justify-content: center;
  gap: 200px;
}
.space-question-div {
  width: 450px;
  height: 382px;
  font-size: 27px;
}
.space-question {
  color: var(--clr-secondary);
  font-family: Georgia, "Times New Roman", Times, serif;
}
.space-word {
  margin-top: 20px;
  margin-bottom: 25px;

  color: white;
  font-size: 130px;
  font-family: Georgia, "Times New Roman", Times, serif;
}
.space-paragraph {
  color: var(--clr-secondary);
}
.explore-button-div {
  height: 234px;
  width: 234px;
}
.explore {
  background: white;
  height: 100%;
  width: 100%;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  color: black;
  font-size: 40px;
  cursor: pointer;
  transition: all 0.3s ease;
}
.explore:hover {
  box-shadow: 0 0 0 30px rgba(255, 255, 255, 0.3);
}
.hamburger {
  width: 50px;
  height: 50px;
  cursor: pointer;
  transition: 0.5s ease;
  display: none;
}
.mobile-nav-menu {
  display: none;
}

@media all and (max-width: 1340px) {
  tr {
    display: none;
  }
}
@media all and (max-width: 1100px) {
  .space {
    padding: 0;
    background-image: url(./assets/home/background-home-tablet.jpg);
  }
  .nav-bar {
    height: 96px;
  }
  .nav-menu {
    backdrop-filter: blur(2px);
    background-color: rgba(255, 255, 255, 0.1);
    width: 60%;
  }
  .nav-list {
    gap: 1.5rem;
    font-size: 14px;
  }
  .home {
    gap: 0;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 2rem;
  }
  .space-question-div {
    margin-top: 80px;
  }
  .explore-button-div {
    height: 202px;
    width: 202px;
    position: absolute;
    bottom: 30px;
  }
}
@media all and (max-width: 700px) {
  .nav-menu {
    display: none;
  }
  .hamburger {
    display: flex;
    height: 25px;
    width: 26px;
    margin-right: 15px;
    cursor: pointer;
    z-index: 1000;
  }
  .mobile-nav-menu {
    display: block;
    position: absolute;
    right: -350px;
    top: 1px;
    height: 100%;
    list-style: none;
    background-color: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(16px);
    width: 60%;
    z-index: 10;
    padding: 1rem;
    padding-top: 100px;
    transition: 0.5s ease;
  }
  .mobile-nav-list {
    list-style: none;
    padding: 1rem;
  }
  .mobile-nav-list > li {
    margin-bottom: 40px;
    display: flex;
    gap: 0.5rem;
    cursor: pointer;
  }
  .explore {
    margin: 0;
  }
  .home {
    height: 400px;
    gap: 0;
  }
  .space-question-div {
    font-size: 19px;
  }
  .space-word {
    margin-top: 10px;
    margin-bottom: 15px;
    font-size: 100px;
  }
  .explore-button-div {
    height: 190px;
    width: 190px;
  }
}

